--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -37,5 +37,16 @@
             <artifactId>phantasm-at-rest</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>4.0.4-alpha</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
