--- a/pom.xml
+++ b/pom.xml
@@ -482,6 +482,11 @@
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>2.0.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.testfx</groupId>
+                <artifactId>testfx-junit</artifactId>
+                <version>4.0.4-alpha</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
