--- a/phantasm-at-rest/src/test/resources/demo.yml
+++ b/phantasm-at-rest/src/test/resources/demo.yml
@@ -25,7 +25,7 @@ assets:
     path: /workspace-explorer
     index: index.html
   - name: meta
-    uri: /meta/
+    uri: /meta2/
     path: /workspace-explorer/meta
     index: index.html
         
