fix numeric input fields on input objects

--- a/pom.xml
+++ b/pom.xml
@@ -740,6 +740,7 @@
                         <version>0.7.5.201505241946</version>
                         <configuration>
                             <excludes>
+                                <exclude>graphql/annotations/**/*</exclude>
                                 <exclude>com/chiralbehaviors/CoRE/occular/**/*</exclude>
                                 <exclude>com/chiralbehaviors/CoRE/jooq/**/*</exclude>
                                 <exclude>com/chiralbehaviors/CoRE/workspace/dsl/**/*</exclude>
