--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <jackson.version>2.6.3 </jackson.version>
         <hibernate.version>5.0.2.Final</hibernate.version>
         <jacoco.version>0.7.5.201505241946</jacoco.version>
+        <fxdiagram.version>0.27.3-SNAPSHOT</fxdiagram.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -96,7 +97,7 @@
             <dependency>
                 <groupId>org.jooq</groupId>
                 <artifactId>jooq</artifactId>
-                <version>3.7.3</version>
+                <version>3.8.1</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -487,6 +488,21 @@
                 <artifactId>testfx-junit</artifactId>
                 <version>4.0.4-alpha</version>
             </dependency>
+            <dependency>
+                <groupId>de.fxdiagram</groupId>
+                <artifactId>de.fxdiagram.core</artifactId>
+                <version>${fxdiagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.fxdiagram</groupId>
+                <artifactId>de.fxdiagram.swtfx</artifactId>
+                <version>${fxdiagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.fxdiagram</groupId>
+                <artifactId>de.fxdiagram.annotations</artifactId>
+                <version>${fxdiagram.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -508,6 +524,36 @@
         <repository>
             <id>jcenter</id>
             <url>https://jcenter.bintray.com/</url>
+        </repository>
+        <repository>
+            <id>xtext</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext-version}</url>
+        </repository>
+        <repository>
+            <id>mars</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/releases/mars</url>
+        </repository>
+        <repository>
+            <id>efxclipse-runtime-repo</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/efxclipse/runtime-released/2.3.0/site</url>
+        </repository>
+        <repository>
+            <id>efxclipse-ide-repo</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/efxclipse/updates-released/2.3.0/site</url>
+        </repository>
+        <repository>
+            <id>kieler</id>
+            <layout>p2</layout>
+            <url>http://rtsys.informatik.uni-kiel.de/~kieler/updatesite/release_pragmatics_2015-02</url>
+        </repository>
+        <repository>
+            <id>xtext-examples</id>
+            <layout>p2</layout>
+            <url>http://meysholdt.github.io/xtext_examples/repositories/generated-with-xtext_2_8_4/</url>
         </repository>
     </repositories>
 
