--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -12,7 +12,7 @@
     <description>Ultrastructure IDE based on Java/FX, using the GraphQL workspace metadata api</description>
 
     <properties>
-        <main.class> com.chiralbehaviors.CoRE.occular.Occular</main.class>
+        <main.class>com.chiralbehaviors.CoRE.ocular.Ocular</main.class>
     </properties>
 
     <dependencies>
@@ -50,6 +50,126 @@
             <groupId>org.testfx</groupId>
             <artifactId>testfx-junit</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.cau.cs.kieler</groupId>
+            <artifactId>core</artifactId>
+            <version>0.14.0.201502261452</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/de.cau.cs.kieler.core-0.14.0.201502261452.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>de.cau.cs.kieler</groupId>
+            <artifactId>core.kgraph</artifactId>
+            <version>0.7.1.201502261452</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/de.cau.cs.kieler.core.kgraph-0.7.1.201502261452.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>de.cau.cs.kieler</groupId>
+            <artifactId>kiml</artifactId>
+            <version>0.17.0.201502261452</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/de.cau.cs.kieler.kiml-0.17.0.201502261452.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>de.cau.cs.kieler</groupId>
+            <artifactId>kiml.formats</artifactId>
+            <version>0.2.3.201502261452</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/de.cau.cs.kieler.kiml.formats-0.2.3.201502261452.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>de.cau.cs.kieler</groupId>
+            <artifactId>kiml.graphviz.dot</artifactId>
+            <version>0.7.1.201502261452</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/de.cau.cs.kieler.kiml.graphviz.dot-0.7.1.201502261452.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>de.cau.cs.kieler</groupId>
+            <artifactId>kiml.graphviz.layouter</artifactId>
+            <version>0.6.8.201502261452</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/de.cau.cs.kieler.kiml.graphviz.layouter-0.6.8.201502261452.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>de.cau.cs.kieler</groupId>
+            <artifactId>kiml.service</artifactId>
+            <version>0.7.2.201502261452</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/de.cau.cs.kieler.kiml.service-0.7.2.201502261452.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>de.fxdiagram</groupId>
+            <artifactId>de.fxdiagram.core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.fxdiagram</groupId>
+            <artifactId>de.fxdiagram.annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.fxdiagram</groupId>
+            <artifactId>de.fxdiagram.external</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.fxdiagram</groupId>
+            <artifactId>de.fxdiagram.lib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.fxdiagram</groupId>
+            <artifactId>de.fxdiagram.mapping</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.fxdiagram</groupId>
+            <artifactId>de.fxdiagram.noeclipse</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore</artifactId>
+            <version>2.11.1-v20150805-0538</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.common</artifactId>
+            <version>2.11.0-v20150805-0538</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+            <version>2.11.1-v20150805-0538</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtend</groupId>
+            <artifactId>org.eclipse.xtend.lib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtend</groupId>
+            <artifactId>org.eclipse.xtend.lib.macro</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.util</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.xbase</artifactId>
+            <version>2.9.2</version>
         </dependency>
     </dependencies>
 
