--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -130,22 +130,18 @@
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
-            <version>4.0</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.ecore</artifactId>
-            <version>2.11.1-v20150805-0538</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.common</artifactId>
-            <version>2.11.0-v20150805-0538</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-            <version>2.11.1-v20150805-0538</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.xtend</groupId>
@@ -154,22 +150,23 @@
         <dependency>
             <groupId>org.eclipse.xtend</groupId>
             <artifactId>org.eclipse.xtend.lib.macro</artifactId>
-            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext</artifactId>
-            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext.util</artifactId>
-            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext.xbase</artifactId>
-            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fxdiagram</groupId>
+            <artifactId>de.fxdiagram.examples</artifactId>
+            <version>${fxdiagram.version}</version>
         </dependency>
     </dependencies>
 
@@ -189,7 +186,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.2.1</version>
+                        <version>1.5.0</version>
                         <executions>
                             <execution>
                                 <id>package-jar</id>
@@ -228,6 +225,7 @@
                                     <goal>pack</goal>
                                 </goals>
                                 <configuration>
+                                    <failOnUnknownAttributes>false</failOnUnknownAttributes>
                                     <normalizeOnly>false</normalizeOnly>
                                     <processMainArtifact>false</processMainArtifact>
                                     <includeClassifiers>
