--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <hibernate.version>5.0.2.Final</hibernate.version>
         <jacoco.version>0.7.5.201505241946</jacoco.version>
         <fxdiagram.version>0.27.3-SNAPSHOT</fxdiagram.version>
+        <xtext.version>2.8.1</xtext.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -511,26 +512,27 @@
             <dependency>
                 <groupId>org.eclipse.xtend</groupId>
                 <artifactId>org.eclipse.xtend.lib</artifactId>
+                <version>${xtext.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.xtend</groupId>
                 <artifactId>org.eclipse.xtend.lib.macro</artifactId>
-                <version>2.9.2</version>
+                <version>${xtext.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.xtext</groupId>
                 <artifactId>org.eclipse.xtext</artifactId>
-                <version>2.9.2</version>
+                <version>${xtext.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.xtext</groupId>
                 <artifactId>org.eclipse.xtext.util</artifactId>
-                <version>2.9.2</version>
+                <version>${xtext.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.xtext</groupId>
                 <artifactId>org.eclipse.xtext.xbase</artifactId>
-                <version>2.9.2</version>
+                <version>${xtext.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
