demo now layoutable
Add crucial missing eclipse platform defs.  Fix runtime detector for
layouter.  Fix antlr-runtime dep for xtext. 

Geebus.

--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -17,6 +17,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr-runtime</artifactId>
+            <version>3.2</version><!--$NO-MVN-MAN-VER$-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.antlr</groupId>
+                    <artifactId>stringtemplate</artifactId>
+                </exclusion>
+            </exclusions><!--$NO-MVN-MAN-VER$-->
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
