--- a/pom.xml
+++ b/pom.xml
@@ -198,11 +198,6 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.eclipse.xtend</groupId>
-                <artifactId>org.eclipse.xtend.lib</artifactId>
-                <version>2.8.0</version>
-            </dependency>
-            <dependency>
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>0.9.10</version>
@@ -465,11 +460,6 @@
                 <version>8.40.10</version>
             </dependency>
             <dependency>
-                <groupId>javax.ws.rs</groupId>
-                <artifactId>javax.ws.rs-api</artifactId>
-                <version>2.0.1</version>
-            </dependency>
-            <dependency>
                 <groupId>org.testfx</groupId>
                 <artifactId>testfx-junit</artifactId>
                 <version>4.0.4-alpha</version>
@@ -641,6 +631,11 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>phantasm-plugin</artifactId>
+                    <version>${project.version}</version>
+                </plugin>
                 <plugin>
                     <groupId>${project.groupId}</groupId>
                     <artifactId>loader-plugin</artifactId>
