jquery version of login

--- a/phantasm-at-rest/src/test/resources/demo.yml
+++ b/phantasm-at-rest/src/test/resources/demo.yml
@@ -28,4 +28,7 @@ assets:
     uri: /api/meta/
     path: /workspace-explorer/meta
     index: index.html
+  - name: js
+    uri: /api/js/
+    path: /workspace-explorer/js
         
