New annotation for phantasm initializers

--- a/test-plugin/pom.xml
+++ b/test-plugin/pom.xml
@@ -19,6 +19,10 @@
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>graphql-java-annotations</groupId>
+            <artifactId>graphql-java-annotations</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
