--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+        </dependency>
     </dependencies>
 
 
