--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -16,6 +16,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.chiralbehaviors</groupId>
+			<artifactId>snapkit</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
 		</dependency>
