--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -16,6 +16,13 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx-samples</artifactId>
+			<version>8.40.12</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
 		</dependency>
