--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -1,11 +1,59 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.chiralbehaviors.CoRE</groupId>
-    <artifactId>CoRE.app</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>ide</artifactId>
-  <name>UaaS App</name>
-  <description>A universal JavaFX IDE and runtime UI for UaaS</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.chiralbehaviors.CoRE</groupId>
+		<artifactId>CoRE.app</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>ide</artifactId>
+	<name>UaaS App</name>
+	<description>A universal JavaFX IDE and runtime UI for UaaS</description>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.chiralbehaviors.layout</groupId>
+			<artifactId>kramer-ql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.hellblazer</groupId>
+			<artifactId>utils</artifactId>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.zenjava</groupId>
+				<artifactId>javafx-maven-plugin</artifactId> 
+				<configuration>
+					<mainClass>com.chiralbehaviors.layout.toy.SinglePageApp</mainClass>
+					<verbose>true</verbose>
+					<vendor>Chiral Behaviors LLC</vendor>
+					<j2seVersion>1.8+</j2seVersion>
+				</configuration>
+				<executions>
+					<execution>
+						<!-- required before build-web -->
+						<id>create-jfxjar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>build-jar</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>create-web</id>
+						<phase>package</phase>
+						<goals>
+							<goal>build-web</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
