--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>com.chiralbehaviors.layout</groupId>
+				<artifactId>kramer-ql</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
 				<groupId>com.bendb.dropwizard</groupId>
 				<artifactId>dropwizard-jooq</artifactId>
 				<version>0.9.1-1</version>
@@ -383,7 +388,7 @@
 			<dependency>
 				<groupId>com.graphql-java</groupId>
 				<artifactId>graphql-java</artifactId>
-				<version>2.0.0</version>
+				<version>2.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>graphql-java-annotations</groupId>
@@ -452,9 +457,44 @@
 				<version>1.0.0</version>
 			</dependency>
 			<dependency>
-				<groupId>org.controlsfx</groupId>
-				<artifactId>controlsfx</artifactId>
-				<version>8.40.12</version>
+				<groupId>com.chiralbehaviors.layout</groupId>
+				<artifactId>toy-app</artifactId>
+				<classifier>phat</classifier>
+				<version>0.0.1-SNAPSHOT</version>
+				<exclusions>
+					<exclusion>
+						<groupId>com.fasterxml.jackson.core</groupId>
+						<artifactId>jackson-annotations</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.chiralbehaviors.layout</groupId>
+						<artifactId>kramer-ql</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.glassfish.jersey.media</groupId>
+						<artifactId>jersey-media-json-jackson</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.fasterxml.jackson.dataformat</groupId>
+						<artifactId>jackson-dataformat-yaml</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>ch.qos.logback</groupId>
+						<artifactId>logback-classic</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.glassfish.jersey.core</groupId>
+						<artifactId>jersey-client</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.hellblazer</groupId>
+						<artifactId>utils</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.fasterxml.jackson.jaxrs</groupId>
+						<artifactId>jackson-jaxrs-json-provider</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -481,11 +521,6 @@
 	</repositories>
 
 	<pluginRepositories>
-		<pluginRepository>
-			<id>reflections-repo</id>
-			<name>Reflections Maven2 Repository</name>
-			<url>http://reflections.googlecode.com/svn/repo</url>
-		</pluginRepository>
 		<pluginRepository>
 			<id>maven-repository.dev.java.net</id>
 			<name>Java.net Maven 2 Repository</name>
@@ -698,6 +733,11 @@
 							</goals>
 						</execution>
 					</executions>
+				</plugin>
+				<plugin>
+					<groupId>com.zenjava</groupId>
+					<artifactId>javafx-maven-plugin</artifactId>
+					<version>8.6.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
